<resources>
    <string name="app_name">EjercicioBBDDNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IES Oretania</string>
    <string name="nav_header_subtitle">Ejercicio BBDD Navigation</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_matricular">Matricular Alumno</string>
    <string name="menu_modificar">Modificar Alumno</string>
    <string name="menu_borrar">Borrar Alumno</string>
    <string name="menu_listar">Listar Alumnos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_inicio-->
    <string name="bienvenidos">Bienvenidos a la APP de nuestro centro educativo</string>
    <!--fragment_matricular/modificar-->
    <string name="tv_matricula">MATRÍCULA DE UN NUEVO ALUMNO</string>
    <string name="tv_modificar">MODIFICAR DE UN NUEVO ALUMNO</string>
    <string name="introduce_dni">Introduce el DNI</string>
    <string name="introduce_nombre">Introduce el nombre</string>
    <string name="introduce_apellidos">Introduce el apellidos</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_aceptar">Aceptar</string>
    <!--fragment_borrar-->
    <string name="tv_borrar">BORRADOR DE UN ALUMNO</string>

    <!--spinner-->
    <string-array name="sexo">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <!--list_Row-->
    <string name="nombre">Nombre y Apellidos:</string>
    <string name="sexo">Sexo:</string>
    <string name="dni">D.N.I:</string>

</resources>