<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_matricular"
            android:icon="@drawable/anadir"
            android:title="@string/menu_matricular" />
        <item
            android:id="@+id/nav_modificar"
            android:icon="@drawable/editar"
            android:title="@string/menu_modificar" />
        <item
            android:id="@+id/nav_borrar"
            android:icon="@drawable/borrar"
            android:title="@string/menu_borrar" />
    </group>
    <item android:title="@string/menu_listar">
        <menu>
            <item
                android:id="@+id/nav_listar"
                android:icon="@drawable/listar"
                android:title="@string/menu_listar" />
        </menu>
    </item>
</menu>