<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.ejerciciobbddnavigation.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_matricular"
        android:name="com.example.ejerciciobbddnavigation.ui.matricular.MatricularFragment"
        android:label="@string/menu_matricular"
        tools:layout="@layout/fragment_matricular" />

    <fragment
        android:id="@+id/nav_modificar"
        android:name="com.example.ejerciciobbddnavigation.ui.modificar.ModificarFragment"
        android:label="@string/menu_modificar"
        tools:layout="@layout/fragment_modificar" />
    <fragment
        android:id="@+id/nav_borrar"
        android:name="com.example.ejerciciobbddnavigation.ui.borrar.BorrarFragment"
        android:label="@string/menu_borrar"
        tools:layout="@layout/fragment_borrar" />
</navigation>