<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewDniIndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dni"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewApellidosList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewNombreLista"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreApeIndo" />

    <TextView
        android:id="@+id/textViewDniLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/textViewDniIndo" />

    <TextView
        android:id="@+id/textViewNombreApeIndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/textViewDniLista" />

    <TextView
        android:id="@+id/textViewNombreLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreApeIndo" />

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="83dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/anadir" />

    <TextView
        android:id="@+id/textViewSexoIndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:text="@string/sexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSexoList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexoIndo" />

</androidx.constraintlayout.widget.ConstraintLayout>